# TeleSeed

./: .gitignore  .gitignore~  .gitmodules  Boss.lua  CHECK  README.md  STATUS  config.lua  dump.rdb  launch.sh  run.sh  seedbot.lua  steady.sh  tmp_launch.sh
.luarocks/luarocks/: config-5.2.lua
bot/: boss.lua  seedbot.lua  utils.lua
data/: config.lua
data1/: config.lua  config.lua.save  isup.lua  moderation.json  remind.lua
groups/: [group_id]log.txt  [group_id]log.txt~  [group_id]memberlist.txt~  [group_id]stats.txt  [group_id]stats.txt~
groups/all/: 1031619309all.txt  1032945546all.txt  1048289829all.txt  1049178444all.txt  1049517247all.txt  1052349020all.txt  1054174795all.txt  1058477515all.txt  1065037014all.txt  1065585334all.txt  1068926380all.txt  1082473673all.txt  1086257471all.txt
groups/lists/: 1022067588stats.txt  [group_id]memberlist.txt  groups.txt  listed_groups.txt  realms.txt
groups/logs/: 0log.txt  1004551001log.txt  1005422600log.txt  1006461691log.txt  1006700757log.txt  101059294log.txt  1011077764log.txt  1012761744log.txt  1013634148log.txt  1018055689log.txt  1018288561log.txt  1020002178log.txt  1021653294log.txt  1022067588log.txt  1023776513log.txt  1023854154log.txt  1024262415log.txt  1027802678log.txt  1029396567log.txt  1030085238log.txt  1030379032log.txt  1030541358log.txt  1030633785log.txt  1030990535log.txt  1031084499log.txt  103121031log.txt  1031230008log.txt  1031323163log.txt  (+294 more)
libs/: feedparser.lua  redis.lua
plugins/: Adds_lock.lua  Anti_link.lua  Fabanhammer.lua  Feedback.lua  Font.lua  Plugins.lua  Reply.lua  Welcome.lua  addplug.lua  admin.lua  all.lua  anti-bot.lua  anti_spam.lua  antisticker.lua  antitag.lua  aparat.lua  aparatdl.lua  arabic.lua  arabic_lock.lua  arbanhammer.lua  arz.lua  azan.lua  banhammer.lua  banhammer.lua~  bing.lua  block.lua  block_user.lua  broadcast.lua  cats.lua  chating.lua  download_media.lua  echoall.lua  echofile.lua  expire.lua  export_gban.lua  feedback.lua  filter.lua  gMaps.lua  gSearch.lua  get.lua  (+53 more)
plugins1/: get.lua  inrealm.lua  links.lua  spam.lua  version.lua
scripts/: kill.sh  start-all.sh  start.sh  update.sh
tg/: Makefile  config.h  config.status  configure.ac  configure.ac.rej
tg/tgl/: Makefile.in  Makefile.tl-parser  README.md  append.tl  auto-static-autocomplete.c  auto-static-fetch.c  auto-static-print-ds.c  auto-static-store.c  binlog.c  binlog.tl  config.h.in  configure  configure.ac  errors  generate.c  mime-types.c  mime.types  mtproto-client.c  mtproto-client.h  mtproto-common.c  mtproto-common.h  mtproto-key.c  mtproto-key.h  mtproto-utils.c  mtproto-utils.h  queries-encrypted.c  queries.c  queries.h  scheme.tl  structures.c  tg-mime-types.c  tgl-binlog.h  tgl-fetch.h  tgl-layout.h  tgl-net-inner.h  tgl-net.c  tgl-queries.h  tgl-structures.h  tgl.c  tgl.h  (+4 more)
tg/tgl/crypto/: aes.h  aes_altern.c  aes_openssl.c  bn.h  bn_altern.c  bn_openssl.c  err.h  err_altern.c  err_openssl.c  md5.h  md5_altern.c  md5_openssl.c  meta.h  rand.h  rand_altern.c  rand_openssl.c  rsa_pem.h  rsa_pem_altern.c  rsa_pem_openssl.c  sha.h  sha_altern.c  sha_openssl.c
tg/tgl/tl-parser/: portable_endian.h  tl-parser.c  tlc.c
ربات/: seedbot.lua
(+179 files in other folders)
